Correction iphone - finitions 6

--- a/stylesheets.css
+++ b/stylesheets.css
@@ -17,7 +17,7 @@ body {
 h1 {
     z-index: 1;
     position: fixed;
-    top: 95%;
+    top: 92%;
     right: 1%;
     font-size: 0.3em;
     color: grey;
@@ -32,13 +32,13 @@ header{
     display: none;
     flex-flow: column wrap;
     width: 100vw;
-    height: 80vh;
+    height: 82vh;
     position: fixed;
     background-color: rgba(128,128,128,0);
     justify-content: space-evenly;
     backdrop-filter: blur(4px);
     border-radius: 5px;
-    animation-duration: 1s;
+    animation-duration: 1.2s;
     animation-direction: alternate;
     animation-name: slidein ;
     font-size: 0.85em;
